New Project Structure and also integrate RecipeRack App classes, screens, widgets, etc

--- a/my_pantry/android/app/src/main/AndroidManifest.xml
+++ b/my_pantry/android/app/src/main/AndroidManifest.xml
@@ -42,4 +42,6 @@
             <data android:mimeType="text/plain"/>
         </intent>
     </queries>
+    <!-- This gives access to make request over internet -->
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
