--- a/my_pantry/pubspec.yaml
+++ b/my_pantry/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   firebase_core: ^3.14.0
   firebase_auth: ^5.6.0
   cloud_firestore: ^5.6.9
+  # Dart HTTP library to make HTTP requests
+  # This is used by the ollama_dart library to make requests to the Ollama API.
+  # It is also used in the app to make requests to the backend server.
+  http: ^1.4.0
+  # Logging framework for proper error logging
+  logging: ^1.3.0
   
 dev_dependencies:
   flutter_test:
