--- a/my_pantry/pubspec.yaml
+++ b/my_pantry/pubspec.yaml
@@ -1,5 +1,5 @@
 name: my_pantry
-description: "A new Flutter project."
+description: "Your new virtual pantry."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -44,6 +44,8 @@ dependencies:
   http: ^1.4.0
   # Logging framework for proper error logging
   logging: ^1.3.0
+  qr_flutter: ^4.0.0
+  mobile_scanner: ^4.0.0 
   
 dev_dependencies:
   flutter_test:
